kubeflow-deployments/private-blueprint/.build/kubeflow-apps/networking.istio.io_v1alpha3_virtualservice_centraldashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: centraldashboard
  namespace: kubeflow
  labels:
    app.kubernetes.io/component: centraldashboard
    app.kubernetes.io/name: centraldashboard
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: centraldashboard.kubeflow.svc.cluster.local
